fix: Align portfolio item boxes with image always on top border

--- a/src/components/portfolio/portfolio-item.module.css
+++ b/src/components/portfolio/portfolio-item.module.css
@@ -2,7 +2,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	position: relative;
 	flex: 1 1 25%;
 	min-width: 15rem;
